[fix] header border on mobile and bottom margin

--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -69,4 +69,10 @@ h2 {
     .header::after {
         left: -255px;
     }
+
+    .header {
+        border-radius: 0;
+        /* border-bottom-left-radius: 0.4rem;
+        border-bottom-right-radius: 0.4rem; */
+    }
 }
