--- a/src/components/main/main.styles.css
+++ b/src/components/main/main.styles.css
@@ -39,7 +39,7 @@
     .second-row-container {
         width: 100%;
         flex-direction: column;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
 
     .third-row-container {
@@ -49,6 +49,7 @@
 
     .insights-container {
         width: 100%;
+        padding-top: 1.3rem;
         padding-left: 8px;
     }
 }
